# tecnicas_aikido

./: README.md  exame.csv  program.py  pyproject.toml
