[project]
name = "tecnicas-aikido"
version = "0.1.0"
description = ""
package-mode = false

authors = [
    {name = "Bruno",email = "ms.bruno1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "streamlit (>=1.45.0,<2.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "plotly-express (>=0.4.1,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
